# seneschal-program

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  prek.toml
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
docs/: pdf-image-rotation-fix.md  seneschal-design.md
fvtt-seneschal/: eslint.config.js  module.json  package-lock.json  package.json
fvtt-seneschal/lang/: en.json
fvtt-seneschal/scripts/: constants.mjs  main.mjs  utils.mjs
fvtt-seneschal/scripts/api/: index.mjs
fvtt-seneschal/scripts/clients/: backend.mjs  session.mjs  websocket.mjs
fvtt-seneschal/scripts/system/: mgt2e.mjs
fvtt-seneschal/scripts/tools/: index.mjs
fvtt-seneschal/scripts/ui/: sidebar.mjs
fvtt-seneschal/scripts/ui/dialogs/: documents.mjs  images.mjs  models.mjs  settings.mjs
fvtt-seneschal/styles/: seneschal.css
fvtt-seneschal/templates/: backend-settings.hbs  documents.hbs  images.hbs  model-selection.hbs  panel.hbs
fvtt-seneschal/tests/: utils.test.js
seneschal-service/: Cargo.toml  build.rs
seneschal-service/prompts/: system.txt
seneschal-service/src/: api.rs  auto_import.rs  config.rs  db.rs  error.rs  i18n.rs  ingestion.rs  main.rs  mcp.rs  ollama.rs  search.rs  service.rs  tools.rs  websocket.rs
seneschal-service/src/api/: conversations.rs  documents.rs  images.rs  search.rs  settings.rs
seneschal-service/src/config/: dynamic_config.rs  loader.rs  static_config.rs
seneschal-service/src/config/dynamic_config/: defaults.rs  keys.rs  merging.rs  schemas.rs
seneschal-service/src/db/: chunks.rs  conversations.rs  documents.rs  images.rs  migrations.rs  models.rs  settings.rs
seneschal-service/src/ingestion/: assets.rs  epub.rs  hash.rs  markdown.rs  pdf.rs
seneschal-service/src/ingestion/pdf/: images.rs  text.rs
seneschal-service/src/ingestion/pdf/images/: background.rs  compositing.rs  coordinate_fixing.rs  extraction.rs  image_saving.rs  overlap.rs  region_render.rs  transforms.rs  types.rs
seneschal-service/src/ingestion/pdf/images/overlap/: groups.rs  regions.rs  union_find.rs
seneschal-service/src/ingestion/pdf/images/transforms/: apply.rs  conversion.rs  ctm.rs  smask.rs
seneschal-service/src/mcp/: handlers.rs  tool_search.rs  tools.rs
seneschal-service/src/mcp/tools/: document.rs  external.rs  image.rs  traveller.rs  traveller_map.rs  traveller_worlds.rs
seneschal-service/src/service/: agentic_loop.rs  chat.rs  document_processing.rs  external_tools.rs  internal_tools.rs  prompts.rs  state.rs
seneschal-service/src/service/document_processing/: cancellation.rs  captioning.rs  crud.rs  processing.rs  progress.rs  upload.rs  workers.rs
seneschal-service/src/service/internal_tools/: documents.rs  images.rs  rendering.rs  system.rs  traveller_basic.rs  traveller_map_api.rs  traveller_worlds.rs
seneschal-service/src/tools/: definitions.rs  registry.rs  tool_defs.rs  traveller.rs  traveller_map.rs  traveller_worlds.rs
seneschal-service/src/tools/tool_defs/: document.rs  fvtt_crud.rs  fvtt_system.rs  image.rs  mcp.rs  mod.rs  rendering.rs  traveller.rs  traveller_map.rs  traveller_worlds.rs
seneschal-service/src/tools/tool_defs/fvtt_crud/: actor.rs  actor_item.rs  compendium.rs  item.rs  journal.rs  journal_page.rs  rollable_table.rs  scene.rs
seneschal-service/src/tools/traveller_map/: client.rs  error.rs  options.rs  responses.rs  tool.rs
seneschal-service/src/websocket/: broadcast.rs  handlers.rs  manager.rs  messages.rs
