[workspace]
resolver = "3"
members = ["seneschal-service"]

[workspace.package]
version = "0.1.0"
authors = ["Jacob Helwig <jacob@technosorcery.net>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/jhelwig/seneschal-program"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.15"

# Error handling
thiserror = "2.0"
rootcause = "0.11"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Streaming support
tokio-stream = "0.1"

# WebSocket support
tokio-tungstenite = "0.24"

# PDF processing (dynamic linking - requires libpdfium.so at runtime)
pdfium-render = { version = "0.8", features = ["image", "thread_safe"] }
image = "0.25"

# PDF image extraction with layer compositing (requires poppler-glib dev package)
poppler-rs = "0.24"
cairo-rs = { version = "0.20", features = ["png"] }

# Image processing for affine transformations
imageproc = "0.25"

# PDF structure parsing for CTM extraction (requires libqpdf-dev)
qpdf = "0.3"

# EPUB processing
epub = "2.1"

# MCP server
rmcp = { version = "0.1", features = ["server", "transport-sse-server"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Metrics and observability
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# i18n
fluent = "0.16"
fluent-bundle = "0.16"
unic-langid = "0.9"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures = "0.3"
async-stream = "0.3"
bytes = "1.9"
mime = "0.3"
multer = "3.1"
markdown = "1.0.0-alpha"
base64 = "0.22"
tempfile = "3.15"

# Security
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Schema generation
schemars = "0.8"

# URL encoding
urlencoding = "2.1"

# Enum utilities (for tool registry)
strum = { version = "0.26", features = ["derive"] }

# BM25 search engine (for MCP tool search)
bm25 = "2.3"

# Lock-free atomic swap for hot reload
arc-swap = "1.7"
